<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyWallet</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="empty">Empty</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <!-- SPINNER -->
    <string name="add_account">Add Account</string>
    <string name="manage_tags">Manage Tags</string>
    <string name="settings">Settings</string>
    <!-- ACCOUNT -->
    <string name="title_activity_account_data">Account Info</string>
    <string name="accounts_save">Save Account</string>
    <string name="accounts_edit">Edit Account</string>
    <string name="accounts_delete">Delete Account</string>
    <string name="account_data_name">Account Name</string>
    <string name="account_data_amount">Initial Amount</string>
    <string name="account_action">Select Account Action</string>
    <string name="account_delete_confirmation_title">Delete Account?</string>
    <!-- MOVES -->
    <string name="title_activity_account_move_data">Move Info</string>
    <string name="move_delete_confirmation_title">Delete Move?</string>
    <!-- DEBTS -->
    <string name="title_activity_account_debt_data">Debt Info</string>
    <!-- CYCLES -->
    <string name="title_activity_account_cycles_data">Cycle Info</string>
    <!-- TAGS -->
    <string name="title_activity_tag">Manage Tags</string>
    <string name="title_activity_tag_data">Tag Info</string>
    <string name="tag_data_name">Tag Name</string>
    <!-- SETTINGS -->
    <string name="title_activity_settings">Settings</string>
    <string name="preferences_formats">Formats</string>
    <string name="preferences_formats_currency">Default Currency</string>
    <string name="preferences_formats_currency_format">Currency Format</string>
    <string name="preferences_formats_number_format">Number Format</string>
    <string name="export">Export</string>
    <string name="popup">popup</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="tags">Tags</string>
    <string name="clear">Clear</string>
    <string name="clone">Clone</string>
    <string name="apply">Apply</string>
    <string name="empty_name">Name cannot be empty!</string>
</resources>
