<menu
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:wallet="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/action_add"
            android:title="@string/add_account"
            android:icon="@android:drawable/ic_menu_add"
            wallet:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_tags"
            android:title="@string/manage_tags"
            android:icon="@android:drawable/ic_menu_info_details"
            wallet:showAsAction="never"/>
    <item
            android:id="@+id/action_edit"
            android:title="@string/accounts_edit"
            android:icon="@android:drawable/ic_menu_edit"
            wallet:showAsAction="never"/>
    <item
            android:id="@+id/action_delete"
            android:title="@string/accounts_delete"
            android:icon="@android:drawable/ic_menu_delete"
            wallet:showAsAction="never"/>
</menu>