<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.haku.wallet.account.debt.AccountDebtDataActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_account_move_data_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:hint="@string/name"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:ems="10"
            android:id="@+id/activity_account_move_data_amount"
            android:layout_below="@+id/activity_account_move_data_name"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/activity_account_move_data_name"
            android:hint="@string/amount"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/activity_account_move_data_description"
            android:layout_below="@+id/activity_account_move_data_amount"
            android:layout_alignParentStart="true"
            android:layout_alignEnd="@+id/activity_account_move_data_amount"
            android:layout_alignParentBottom="true"
            android:hint="@string/description"/>
</RelativeLayout>
