<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context="com.haku.wallet.account.move.AccountMoveDataActivity">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_account_move_data_name"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true"
            android:hint="@string/name"
            android:layout_toStartOf="@+id/activity_account_move_data_amount"/>

    <EditText
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:ems="10"
            android:id="@+id/activity_account_move_data_amount"
            android:hint="@string/amount"
            android:layout_alignTop="@+id/activity_account_move_data_name"
            android:layout_alignEnd="@+id/activity_account_move_data_description"/>

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/activity_account_move_data_description"
            android:hint="@string/description"
            android:gravity="top"
            android:layout_below="@+id/activity_account_move_data_added"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"/>

    <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_account_move_data_tag"
            android:layout_toEndOf="@+id/activity_account_move_data_amount"
            android:layout_toStartOf="@+id/activity_account_move_data_amount"
            android:layout_below="@+id/activity_account_move_data_name"
            android:layout_alignParentStart="true"
            android:layout_alignBottom="@+id/activity_account_move_data_added"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/activity_account_move_data_added"
            android:layout_below="@+id/activity_account_move_data_amount"
            android:layout_alignEnd="@+id/activity_account_move_data_amount"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:hint="@string/date"
            android:gravity="center"
            android:layout_toEndOf="@+id/activity_account_move_data_name"/>

</RelativeLayout>
